...
        guard let presenter = presenter else { return }
        
        let alertResultsText = presenter.makeResultsMessage()
        let resultModel = QuizResultViewModel(
            title: "Этот раунд окончен!",
            text: alertResultsText,
            buttonText: "Сыграть еще раз"
        )
        alertPresenter?.requestPresentAlert(resultModel) { [weak self] _ in
            guard let self = self else { return }
            self.presenter?.restartGame()
        }
    }
...
